--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "gaggiuino"
+name = "gaggiuino_api"
 version = "0.1.0"
 description = "Gaggiuino REST Api Wrapper"
 readme = "README.md"
@@ -10,6 +10,8 @@ requires-python = ">=3.13"
 dependencies = [
     "aiohttp>=3.11.12",
 ]
+packages = ["gaggiuino_api"]
+
 
 [build-system]
 requires = ["hatchling"]
@@ -23,7 +25,7 @@ dev = [
 
 [tool.ruff]
 target-version = "py313"
-src = ["gaggiuino", "test"]
+src = ["gaggiuino_api", "test"]
 extend-exclude = [".idea/"]
 extend-include = []
 output-format = "grouped"
