--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,10 @@ build-backend = "hatchling.build"
 [dependency-groups]
 dev = [
     "pre-commit>=4.1.0",
+    "pytest>=8.3.4",
+    "pytest-asyncio>=0.25.3",
     "ruff>=0.9.7",
+    "tox>=4.24.1",
 ]
 
 [tool.ruff]
@@ -52,3 +55,9 @@ max-public-methods = 30
 
 [tool.ruff.lint.extend-per-file-ignores]
 "__init__.py" = ["E402"]
+
+[tool.pytest.ini_options]
+minversion = "8.3.4"
+addopts = "-ra -q"
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "session"
