--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,10 +20,10 @@ build-backend = "hatchling.build"
 [dependency-groups]
 dev = [
     "pre-commit>=4.1.0",
-    "pytest>=8.3.4",
-    "pytest-asyncio>=0.25.3",
-    "ruff>=0.9.7",
-    "tox>=4.24.1",
+    "pytest>=8.3.4",  # update this in tox.ini
+    "pytest-asyncio>=0.25.3",  # update this in tox.ini
+    "ruff>=0.9.7",  # update this in tox.ini
+    "tox>=4.24.1",  # update this in tox.ini
 ]
 
 [tool.ruff]
