--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 authors = [
     { name = "Alexey ALERT Rubashёff", email = "alexey.rubasheff@gmail.com" }
 ]
-requires-python = ">=3.13"
+requires-python = "==3.13.*"
 dependencies = [
     "aiohttp",
 ]
