--- a/tox.ini
+++ b/tox.ini
@@ -1,23 +1,22 @@
 [tox]
-minversion = 4.0
 env_list =
-    py
-    lint
+    py313
+    py314
+    pre-commit
 isolated_build = True
 
 [testenv]
 description = run unit tests
 deps =
-    pytest>=8.4.1
-    pytest-asyncio>=1.1.0
+    pytest
+    pytest-asyncio
 commands =
     pytest {posargs:test}
 
-[testenv:lint]
-description = run linters
+[testenv:pre-commit]
+description = run code formatter and linter (auto-fix)
 skip_install = true
 deps =
-    ruff>=0.12.9
+    pre-commit-uv
 commands =
-    ruff check {posargs:.}
-    ruff format --check {posargs:.}
+    pre-commit run --all-files --show-diff-on-failure
