renames tox env

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 env_list =
     py313
     py314
-    pre-commit
+    lint
 isolated_build = True
 
 [testenv]
@@ -13,7 +13,7 @@ deps =
 commands =
     pytest {posargs:test}
 
-[testenv:pre-commit]
+[testenv:lint]
 description = run code formatter and linter (auto-fix)
 skip_install = true
 deps =
