chore: Update build environment and add package dependencies.
- Add twine package for distributing and uploading Python packages.
- Introduce a new build environment to check package builds and metadata.

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ env_list =
     py313
     py314
     lint
+    build
 isolated_build = True
 
 [testenv]
@@ -20,3 +21,13 @@ deps =
     pre-commit-uv
 commands =
     pre-commit run --all-files --show-diff-on-failure
+
+[testenv:build]
+description = verify package builds (sdist + wheel) and metadata
+skip_install = true
+deps =
+    uv
+    twine
+commands =
+    uv build --sdist --wheel --out-dir {toxinidir}\dist
+    twine check --strict {toxinidir}\dist\*
