--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,12 @@
 [tox]
+isolated_build = True
 env_list =
     py313
     py314
     lint
     build
-isolated_build = True
+labels =
+    tests = py313, py314
 
 [testenv]
 description = run unit tests
