--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,11 @@
 [tox]
 isolated_build = True
 env_list =
-    py313
     py314
     lint
     build
 labels =
-    tests = py313, py314
+    tests = py314
 
 [testenv]
 description = run unit tests
