--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ max-public-methods = 30
 "__init__.py" = ["E402"]
 
 [tool.pytest.ini_options]
+pythonpath = ["src"]
 addopts = "-ra -q"
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "session"
