--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,15 @@
 [tox]
 isolated_build = True
 env_list =
+    py310
+    py311
+    py312
+    py313
     py314
     lint
     build
 labels =
-    tests = py314
+    tests = py310, py311, py312, py313, py314
 
 [testenv]
 description = run unit tests
