--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,7 @@ max-public-methods = 30
 
 [tool.pytest.ini_options]
 pythonpath = ["src"]
-addopts = "-ra -q"
+addopts = ["-ra", "-q", "-m", "not integration"]
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "session"
+markers = ["integration: marks tests as integration tests (deselect with '-m \"not integration\"')"]
