--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,11 @@
 [tox]
 isolated_build = True
 env_list =
-    py310
-    py311
-    py312
-    py313
     py314
     lint
     build
 labels =
-    tests = py310, py311, py312, py313, py314
+    tests = py314
 
 [testenv]
 description = run unit tests
