--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 authors = [
     { name = "Alexey ALERT Rubashёff", email = "alexey.rubasheff@gmail.com" }
 ]
-requires-python = ">=3.10.0"  # follow https://github.com/home-assistant/core/blob/dev/pyproject.toml
+requires-python = ">=3.10.0"
 dependencies = [
     "aiohttp",
 ]
