--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "gaggiuino_api"
-version = "0.1.12"
+version = "0.1.13b1"
 description = "Gaggiuino REST Api Wrapper"
 readme = "README.md"
 authors = [
