--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,19 @@ readme = "README.md"
 authors = [
     { name = "Alexey ALERT Rubashёff", email = "alexey.rubasheff@gmail.com" }
 ]
+classifiers = [
+    "Topic :: Software Development :: Libraries :: Python Modules"
+]
+keywords = ["gaggiuino", "api"]
 requires-python = ">=3.10.0"
 dependencies = [
     "aiohttp",
 ]
+
+[project.urls]
+homepage = "https://github.com/ALERTua/gaggiuino_api"
+repository = "https://github.com/ALERTua/gaggiuino_api"
+documentation = "https://github.com/ALERTua/gaggiuino_api"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
